Migliorata la leggibilità del notebook

--- a/Download_Subset_e_Preprocessing.ipynb
+++ b/Download_Subset_e_Preprocessing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5OgDBRSwSCS/54G0I8S55",
+      "authorship_tag": "ABX9TyPR0X2YIKDgnvR+fMy8nTGV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,6 +99,32 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Di seguito vengono descritti i task svolti per ogni run e la loro durata in minuti:\n",
+        "\n",
+        "1.  basale, occhi aperti - 1\n",
+        "2.  basale, occhi chiusi - 1\n",
+        "3.  aprire e chiudere il pugno destro o sinistro - 2\n",
+        "4.  immagina di aprire e chiudere il pugno destro o sinistro - 2\n",
+        "5.  apre e chiude entrambi i piedi o entrambi i pugni - 2\n",
+        "6.  immagina di chiudere entrambi i piedi o entrambi i pugni - 2\n",
+        "\n",
+        "Poi si ripetono gli stessi task descritti al relativo numero per le successive run:\n",
+        "\n",
+        "3.   Run 7 e 11\n",
+        "4.   Run 8 e 12\n",
+        "5.   Run 9 e 13\n",
+        "6.   Run 10 e 14\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "x6sS1o1cWDnq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#@title Scegli quale Run scaricare\n",
@@ -180,7 +206,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Grazie alle analisi svolte sino a questo momento, ora è possibile iniziare a lavorare con i dati al fine di trasformarli per una elaborazione più efficiente da parte dei classificatori."
+        "Riproduciamo il preprocessing che ci ha portato ai migliori risultati durante la Run01."
       ],
       "metadata": {
         "id": "YDvPOHkufCl1"
@@ -234,6 +260,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "La banda che utilizzeremo d'ora in poi è la ABG, che copre le frequenze da 8 a 40, ossia l'insieme di Alpha, Beta e Gamma."
+      ],
+      "metadata": {
+        "id": "471Q4oPrYHj6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#@title Seleziona la banda che vuoi utilizzare:\n",
@@ -269,7 +304,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Abbiamo aggiunto una riga di codice per convertire la frequenza di campionamento sempre a 160. Il volontario 88 di 109 risulta con frequenza pari a 128 per tutte le run dalla 3 alla 14."
+        "Durante la Run01 tutti i volontari sono stati registrati con una frequenza di campionamento pari a 160 Hz.\n",
+        "\n",
+        "Qui di seguito bbiamo aggiunto una riga di codice per garantire la frequenza di campionamento sempre a 160. Il volontario 88 di 109, infatti, risulta con frequenza pari a 128 per tutte le run dalla 3 alla 14."
       ],
       "metadata": {
         "id": "wSXruV6Xm8Ms"
@@ -348,20 +385,7 @@
         "# Normalizza i dati di train, validation e test usando la media e la deviazione standard\n",
         "train_data = (train_data - media) / dev_std\n",
         "val_data = (val_data - media) / dev_std\n",
-        "test_data = (test_data - media) / dev_std\n",
-        "\n",
-        "# Verifica le dimensioni dei dataset e delle etichette\n",
-        "print(f\"Train set shape: {train_data.shape}, Train labels shape: {train_labels.shape}\")\n",
-        "print(f\"Validation set shape: {val_data.shape}, Validation labels shape: {val_labels.shape}\")\n",
-        "print(f\"Test set shape: {test_data.shape}, Test labels shape: {test_labels.shape}\")\n",
-        "\n",
-        "# Salva i dataset e le etichette in formato .npy\n",
-        "np.save(f\"{save_path}/train_data_{banda}.npy\", train_data)\n",
-        "np.save(f\"{save_path}/train_labels_{banda}.npy\", train_labels)\n",
-        "np.save(f\"{save_path}/val_data_{banda}.npy\", val_data)\n",
-        "np.save(f\"{save_path}/val_labels_{banda}.npy\", val_labels)\n",
-        "np.save(f\"{save_path}/test_data_{banda}.npy\", test_data)\n",
-        "np.save(f\"{save_path}/test_labels_{banda}.npy\", test_labels)\n"
+        "test_data = (test_data - media) / dev_std\n"
       ],
       "metadata": {
         "colab": {
@@ -382,6 +406,39 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Verifichiamo le dimensioni dei dataset e delle etichette\n",
+        "print(f\"Train set shape: {train_data.shape}, Train labels shape: {train_labels.shape}\")\n",
+        "print(f\"Validation set shape: {val_data.shape}, Validation labels shape: {val_labels.shape}\")\n",
+        "print(f\"Test set shape: {test_data.shape}, Test labels shape: {test_labels.shape}\")"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "v31hFgqEY0Cj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Salviamo i dataset e le etichette in formato .npy\n",
+        "np.save(f\"{save_path}/train_data_{banda}.npy\", train_data)\n",
+        "np.save(f\"{save_path}/train_labels_{banda}.npy\", train_labels)\n",
+        "np.save(f\"{save_path}/val_data_{banda}.npy\", val_data)\n",
+        "np.save(f\"{save_path}/val_labels_{banda}.npy\", val_labels)\n",
+        "np.save(f\"{save_path}/test_data_{banda}.npy\", test_data)\n",
+        "np.save(f\"{save_path}/test_labels_{banda}.npy\", test_labels)"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "2efKdTBgY8_R"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
