Revisione testo e pulizia codice

--- a/Download_Subset_e_Preprocessing.ipynb
+++ b/Download_Subset_e_Preprocessing.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPR0X2YIKDgnvR+fMy8nTGV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,12 +55,12 @@
       "metadata": {
         "id": "q_gLJQL3eioG"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "UXGRUaFUXzqL"
       },
@@ -87,7 +86,7 @@
         "id": "hnPDWsN1YDxe",
         "outputId": "adf6d34f-53af-4153-efa6-f2ca57b91bc6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,24 +100,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Di seguito vengono descritti i task svolti per ogni run e la loro durata in minuti:\n",
+        "Di seguito vengono descritti i task svolti dal paziente per ogni run e la loro durata in minuti:\n",
         "\n",
-        "1.  basale, occhi aperti - 1\n",
-        "2.  basale, occhi chiusi - 1\n",
-        "3.  aprire e chiudere il pugno destro o sinistro - 2\n",
-        "4.  immagina di aprire e chiudere il pugno destro o sinistro - 2\n",
-        "5.  apre e chiude entrambi i piedi o entrambi i pugni - 2\n",
-        "6.  immagina di chiudere entrambi i piedi o entrambi i pugni - 2\n",
+        "1.  basale, occhi aperti: 1 min;\n",
+        "2.  basale, occhi chiusi: 1 min;\n",
+        "3.  apre e chiude il pugno destro o sinistro: 2 min;\n",
+        "4.  immagina di aprire e chiudere il pugno destro o sinistro: 2 min;\n",
+        "5.  apre e chiude entrambi i piedi o entrambi i pugni: 2 min;\n",
+        "6.  immagina di chiudere entrambi i piedi o entrambi i pugni: 2 min.\n",
         "\n",
         "Poi si ripetono gli stessi task descritti al relativo numero per le successive run:\n",
         "\n",
-        "3.   Run 7 e 11\n",
-        "4.   Run 8 e 12\n",
-        "5.   Run 9 e 13\n",
-        "6.   Run 10 e 14\n",
-        "\n",
-        "\n",
-        "\n"
+        "*   Task 3  -->  Run 7 e 11;\n",
+        "*   Task 4  -->  Run 8 e 12;\n",
+        "*   Task 5  -->  Run 9 e 13;\n",
+        "*   Task 6  -->  Run 10 e 14."
       ],
       "metadata": {
         "id": "x6sS1o1cWDnq"
@@ -128,17 +124,20 @@
       "cell_type": "code",
       "source": [
         "#@title Scegli quale Run scaricare\n",
+        "\n",
         "#@markdown Inserire un valore compreso fra 1 e 14 inclusi:\n",
+        "\n",
         "run = 4 #@param {type:\"integer\"}\n",
         "run = f\"R{run:02d}\"\n",
+        "\n",
         "# Crea la cartella di destinazione se non esiste\n",
         "dest_dir = f\"/content/{run}\"\n",
-        "os.makedirs(dest_dir, exist_ok=True)  # Crea la cartella se non esiste"
+        "os.makedirs(dest_dir, exist_ok=True)                                            # Crea la cartella se non esiste"
       ],
       "metadata": {
         "id": "w6rl-vkaYYrl"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +145,7 @@
       "source": [
         "# Da S001 a S109\n",
         "for i in range(1, 110):\n",
-        "    volontario = f\"S{i:03d}\"  # Formatta come S001, S002, ..., S109\n",
+        "    volontario = f\"S{i:03d}\"                                                    # Formatta come S001, S002, ..., S109\n",
         "    url = f\"https://www.physionet.org/files/eegmmidb/1.0.0/{volontario}/{volontario}{run}.edf\"\n",
         "    print(f\"Scaricando il file {i}/109\\n\")\n",
         "    !wget -P {dest_dir} {url}\n",
@@ -159,7 +158,7 @@
         "id": "5HNaKBBbYK-B",
         "outputId": "5142edf1-1556-47d0-ecc6-ba6a550ccaf0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +189,7 @@
       "metadata": {
         "id": "jgsl8ORNfRxs"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -215,10 +214,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Per il nostro progetto è stato scelto di:\n",
-        "*   segmentare i record EEG in campioni di 1,5 secondi\n",
-        "*   analizzare come le prestazioni cambiano modificando il filtro della banda del segnale\n",
-        "*   suddividere i campioni in 70% per l'addestramento, 15% per la validazione e il 15% rimanente per il test\n"
+        "Questa fase si divide in tre punti:\n",
+        "*   segmentare i record EEG in campioni di 1,5 secondi;\n",
+        "*   analizzare come le prestazioni cambiano modificando il filtro della banda del segnale;\n",
+        "*   suddividere i campioni in 70% per l'addestramento, 15% per la validazione e il 15% rimanente per il test.\n",
+        "\n"
       ],
       "metadata": {
         "id": "KtCyT60Hszjd"
@@ -228,6 +228,7 @@
       "cell_type": "code",
       "source": [
         "#@title Parametri segmentazione e suddivisione\n",
+        "\n",
         "duration = 1.5\n",
         "train_ratio = 0.7\n",
         "val_ratio = 0.15\n",
@@ -236,7 +237,7 @@
       "metadata": {
         "id": "iGEIMVuTtvoS"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -247,7 +248,7 @@
       "metadata": {
         "id": "BvQq8uWCe7qG"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -262,7 +263,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "La banda che utilizzeremo d'ora in poi è la ABG, che copre le frequenze da 8 a 40, ossia l'insieme di Alpha, Beta e Gamma."
+        "La banda che utilizzeremo d'ora in poi è la ABG, che copre le frequenze da 8 a 40 Hz, ossia l'insieme di Alpha, Beta e Gamma."
       ],
       "metadata": {
         "id": "471Q4oPrYHj6"
@@ -272,13 +273,16 @@
       "cell_type": "code",
       "source": [
         "#@title Seleziona la banda che vuoi utilizzare:\n",
+        "\n",
         "#@markdown (delta, theta, alpha, beta, gamma, broadband, personalizzata, ABG)\n",
         "\n",
         "banda = 'ABG' #@param ['delta', 'theta', 'alpha', 'beta', 'gamma', 'broadband', 'personalizzata', 'ABG']\n",
+        "\n",
         "save_path = f'/content/drive/MyDrive/EEG Recognition/Dati preprocessati/{run}/{banda}'\n",
+        "\n",
         "# Verifica se la cartella esiste già\n",
         "if not os.path.exists(save_path):\n",
-        "    os.makedirs(save_path)  # Crea la cartella\n",
+        "    os.makedirs(save_path)                                                      # Crea la cartella\n",
         "    print(f\"Cartella '{save_path}' creata con successo.\")\n",
         "else:\n",
         "    print(f\"La cartella '{save_path}' esiste già.\")\n"
@@ -290,7 +294,7 @@
         },
         "outputId": "84392ecb-0682-4559-a1de-f283be259e68"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +310,7 @@
       "source": [
         "Durante la Run01 tutti i volontari sono stati registrati con una frequenza di campionamento pari a 160 Hz.\n",
         "\n",
-        "Qui di seguito bbiamo aggiunto una riga di codice per garantire la frequenza di campionamento sempre a 160. Il volontario 88 di 109, infatti, risulta con frequenza pari a 128 per tutte le run dalla 3 alla 14."
+        "Qui di seguito abbiamo aggiunto una riga di codice per garantire la frequenza di campionamento sempre a 160. Il volontario 88 di 109, infatti, risulta con frequenza pari a 128 Hz per tutte le run dalla 3 alla 14."
       ],
       "metadata": {
         "id": "wSXruV6Xm8Ms"
@@ -327,13 +331,14 @@
         "# Ciclo su tutti i file .edf\n",
         "for i, eeg in enumerate(files):\n",
         "    print(f\"Elaborazione del volontario {i + 1} su {len(files)}\\n\")\n",
+        "\n",
         "    # Carica il file EDF\n",
         "    raw_data = mne.io.read_raw_edf(f\"{dest_dir}/{eeg}\", preload=True, verbose = 'CRITICAL')\n",
         "\n",
         "    #converti a 160 Hz\n",
         "    if(raw_data.info['sfreq'] != 160):\n",
         "      raw_data = raw_data.copy().resample(160)\n",
-        "    label = i  # Ottieni l'etichetta del file\n",
+        "    label = i                                                                   # Ottieni l'etichetta del file\n",
         "\n",
         "    # Filtro per bande\n",
         "    raw_data.filter(l_freq=bande[banda][0], h_freq=bande[banda][1], n_jobs=8, verbose = 'CRITICAL')\n",
@@ -342,16 +347,17 @@
         "    epochs = mne.make_fixed_length_epochs(raw_data, duration=duration, overlap=0)\n",
         "\n",
         "    # Estrazione dei dati come array NumPy\n",
-        "    data = epochs.get_data()  # Dimensioni: (n_epochs, n_channels, n_times)\n",
+        "    data = epochs.get_data()                                                    # Dimensioni: (n_epochs, n_channels, n_times)\n",
+        "\n",
         "    # Ora, dopo aver terminato tutte le operazioni di `mne`, si può convertire i dati in float32\n",
         "    data = data.astype(np.float32)\n",
         "\n",
-        "    data = np.array([epoch.T for epoch in data])  # Riduci ogni epoca\n",
+        "    data = np.array([epoch.T for epoch in data])                                # Riduci ogni epoca\n",
         "\n",
         "    clear_output(wait=True)\n",
         "\n",
         "    # Genera le etichette per ciascuna epoca\n",
-        "    labels_for_file = [label] * len(data)  # Assegna la stessa etichetta a tutte le epoche del file\n",
+        "    labels_for_file = [label] * len(data)                                       # Assegna la stessa etichetta a tutte le epoche del file\n",
         "\n",
         "    # Calcolo del numero di segmenti per ciascun set (train, val, test)\n",
         "    n_samples = len(data)\n",
@@ -394,7 +400,7 @@
         "id": "vxbwV-FCl-7K",
         "outputId": "8fe1487e-933b-4fc1-e7d6-aeb538b53e1b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,12 +417,12 @@
       "cell_type": "code",
       "source": [
         "#@title Verifichiamo le dimensioni dei dataset e delle etichette\n",
+        "\n",
         "print(f\"Train set shape: {train_data.shape}, Train labels shape: {train_labels.shape}\")\n",
         "print(f\"Validation set shape: {val_data.shape}, Validation labels shape: {val_labels.shape}\")\n",
         "print(f\"Test set shape: {test_data.shape}, Test labels shape: {test_labels.shape}\")"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "v31hFgqEY0Cj"
       },
       "execution_count": null,
@@ -426,6 +432,7 @@
       "cell_type": "code",
       "source": [
         "#@title Salviamo i dataset e le etichette in formato .npy\n",
+        "\n",
         "np.save(f\"{save_path}/train_data_{banda}.npy\", train_data)\n",
         "np.save(f\"{save_path}/train_labels_{banda}.npy\", train_labels)\n",
         "np.save(f\"{save_path}/val_data_{banda}.npy\", val_data)\n",
@@ -434,7 +441,6 @@
         "np.save(f\"{save_path}/test_labels_{banda}.npy\", test_labels)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "2efKdTBgY8_R"
       },
       "execution_count": null,
