--- a/Classificatore_Ensemble.ipynb
+++ b/Classificatore_Ensemble.ipynb
@@ -5,12 +5,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "collapsed_sections": [
-        "LyPbHzAnsaYg",
-        "-IncMLiyL8MD",
-        "2CTGSx_5NC3Z",
-        "3dn5tRd27zIz"
-      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +24,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Cipe96/EEG-Recognition/blob/main/Classificatore_Ensamble.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Cipe96/EEG-Recognition/blob/main/Classificatore_Ensemble.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "<font size=6>**EEG Recognition: Classificatore Ensamble**</font>\n",
+        "<font size=6>**EEG Recognition: Classificatore Ensemble**</font>\n",
         "</br><font size=3>*Marco Cipollina, Riccardo Era*</font>\n"
       ],
       "metadata": {
@@ -46,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<p style=\"font-size:4px;\" align=\"justify\">Dopo avere addestrato il modello convolutivo costruito per questo progetto sia sui dati della run 01 (basale, basale occhi aperti), sia run 02 (basale, occhi chiusi) che sui dati della run 06 (immaginare di chiedere pugni e piedi in determinati momenti) , in questo notebook vogliamo analizzare le capacità di un classificatore Ensamble (formato dalla media della somma pesata per classe dei tre classificatori) di classificare i dati di una qualsiasi altra run.</p>\n",
+        "<p style=\"font-size:4px;\" align=\"justify\">Dopo avere addestrato il modello convolutivo costruito per questo progetto sia sui dati della run 01 (basale, basale occhi aperti), sia run 02 (basale, occhi chiusi) che sui dati della run 06 (immaginare di chiedere pugni e piedi in determinati momenti) , in questo notebook vogliamo analizzare le capacità di un classificatore Ensemble (formato dalla media della somma pesata per classe dei tre classificatori) di classificare i dati di una qualsiasi altra run.</p>\n",
         "\n",
         "<p style=\"font-size:4px;\" align=\"justify\">....</p>"
       ],
@@ -59,13 +53,11 @@
       "source": [
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.utils import shuffle\n",
-        "import matplotlib.pyplot as plt\n",
         "from google.colab import drive\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import sys\n",
-        "import os\n",
         "\n",
         "SEED = 96                                                                       #Impostiamo un seme specifico per garantire la replicabilità degli esperimenti"
       ],
@@ -132,6 +124,7 @@
       "cell_type": "code",
       "source": [
         "#@title Seleziona la Run che vuoi utilizzare (fra quelle che hai sul drive):\n",
+        "\n",
         "#@markdown Inserisci un valore compreso fra 1 e 14 inclusi:\n",
         "\n",
         "run = 6 #@param {type:\"integer\"}\n",
@@ -140,13 +133,14 @@
       "metadata": {
         "id": "536BlkYWsZqY"
       },
-      "execution_count": 704,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#@title Seleziona la banda che vuoi utilizzare:\n",
+        "\n",
         "#@markdown (delta, theta, alpha, beta, gamma, broadband, personalizzata, ABG)\n",
         "\n",
         "banda = 'ABG' #@param ['delta', 'theta', 'alpha', 'beta', 'gamma', 'broadband', 'personalizzata', 'ABG']\n",
@@ -155,7 +149,7 @@
       "metadata": {
         "id": "Lez481oNm5Lm"
       },
-      "execution_count": 705,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +162,7 @@
       "metadata": {
         "id": "JG5VzsHVwvnt"
       },
-      "execution_count": 706,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +187,7 @@
         "id": "xzjd9fzDzTOV",
         "outputId": "2ee23e67-4aff-4e1d-9d75-6697c53c9800"
       },
-      "execution_count": 707,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +216,7 @@
       "metadata": {
         "id": "yVyfhLl2hj-I"
       },
-      "execution_count": 708,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,6 +233,7 @@
       "cell_type": "code",
       "source": [
         "#@title Carica il modello (architettura, pesi e configurazioni)\n",
+        "\n",
         "weights_path = f'{PERCORSO_DRIVE}/Dati preprocessati/R01/Pesi convolutivo/'\n",
         "model01 = tf.keras.models.load_model(weights_path + f'best-{banda}.keras')\n",
         "print(\"architettura, pesi e configurazione caricati con successo\")\n"
@@ -250,7 +245,7 @@
         "id": "zMJLe0sUwJvf",
         "outputId": "74641871-2214-4190-9f58-7c370b2ff0ab"
       },
-      "execution_count": 709,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +259,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Verifichiamo che il modello sia costruito come vogliamo."
+        "Visualizzazione della struttura modello"
       ],
       "metadata": {
         "id": "5BQ2RFxhKWcv"
@@ -277,13 +272,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Fr-mBF1xKU5g",
         "outputId": "b6b43c04-f107-423e-c99b-6083ca18a7a7"
       },
-      "execution_count": 710,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -418,7 +412,7 @@
         "id": "gMW8YIZbgY6u",
         "outputId": "e317c069-efe0-49ce-ae85-c5f352b6abd8"
       },
-      "execution_count": 711,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,6 +437,7 @@
       "cell_type": "code",
       "source": [
         "#@title Carica il modello (architettura, pesi e configurazioni)\n",
+        "\n",
         "weights_path = f'{PERCORSO_DRIVE}/Dati preprocessati/R02/Pesi convolutivo/'\n",
         "model02 = tf.keras.models.load_model(weights_path + f'best-{banda}.keras')\n",
         "print(\"architettura, pesi e configurazione caricati con successo\")\n"
@@ -454,7 +449,7 @@
         "outputId": "2cccbcd3-dfdd-4335-ea16-19bda513229f",
         "id": "bYJxD0IvNC3a"
       },
-      "execution_count": 712,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,7 +463,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Verifichiamo che il modello sia costruito come vogliamo."
+        "Visualizzazione della struttura modello"
       ],
       "metadata": {
         "id": "6bmEr3rxNC3a"
@@ -481,13 +476,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "8f90acbc-fbd6-49ad-c091-6acbe48bfde7",
         "id": "pTTEDgcWNC3a"
       },
-      "execution_count": 713,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -622,7 +616,7 @@
         "outputId": "3d7737ee-b92d-4777-903c-11b15daabece",
         "id": "DYpmd7YPNC3b"
       },
-      "execution_count": 714,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,6 +641,7 @@
       "cell_type": "code",
       "source": [
         "#@title Carica il modello (architettura, pesi e configurazioni)\n",
+        "\n",
         "weights_path = f'{PERCORSO_DRIVE}/Dati preprocessati/R06/Pesi convolutivo/'\n",
         "model06 = tf.keras.models.load_model(weights_path + f'best-{banda}.keras')\n",
         "print(\"architettura, pesi e configurazione caricati con successo\")\n"
@@ -658,7 +653,7 @@
         "outputId": "73dc316c-6e0e-46a0-d7a6-1b9910d2e929",
         "id": "Y9_RhWl27zI0"
       },
-      "execution_count": 715,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,7 +667,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Verifichiamo che il modello sia costruito come vogliamo."
+        "Visualizzazione della struttura modello"
       ],
       "metadata": {
         "id": "ybB16gKY7zI0"
@@ -685,13 +680,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "bb910efc-097b-48d2-9a8c-680a9703abc5",
         "id": "THTUXNQu7zI0"
       },
-      "execution_count": 716,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -826,7 +820,7 @@
         "outputId": "53d5bcb6-36b3-4e7a-8eac-61f73a914845",
         "id": "DiNhnO0l7zI1"
       },
-      "execution_count": 717,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -841,7 +835,7 @@
       "cell_type": "markdown",
       "source": [
         "<a name=\"3\"></a>\n",
-        "# **Classificatore Ensamble**"
+        "# **Classificatore Ensemble**"
       ],
       "metadata": {
         "id": "HietUvDbFOG7"
@@ -850,7 +844,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Qui di seguito è possibile combinare come si vuole il classificatore Ensamble.\n",
+        "Qui di seguito è possibile combinare come si vuole il classificatore Ensemble.\n",
         "In caso di combinazione a due, i classificatori avranno voto pesato in egual modo, sommando le loro predizioni per classe.\n",
         "Generalmente abbiamo ottenuto i risultati migliori sommando le predizioni di tutti e tre i classificatori dando peso doppio al terzo (addestrato sul doppio dei dati)."
       ],
@@ -861,7 +855,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Combina il tuo Ensamble utilizzando i classificatori addestrati rispettivamente sulle Run 01, 02 e 06:\n",
+        "#@title Combina il tuo Ensemble utilizzando i classificatori addestrati rispettivamente sulle Run 01, 02 e 06:\n",
         "\n",
         "modello_01 =  True #@param {type:\"boolean\"}\n",
         "modello_02 =  True #@param {type:\"boolean\"}\n",
@@ -870,7 +864,7 @@
       "metadata": {
         "id": "ackIwzmw2Ilh"
       },
-      "execution_count": 730,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -900,16 +894,16 @@
         "matrice_df = pd.DataFrame(matrice_resultati, index=combinazioni_modelli, columns=test_sets)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "iMb2AKZj_Ara"
       },
-      "execution_count": 575,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#@title Combina i voti e calcola l'accuratezza dell'Ensamble\n",
+        "#@title Combina i voti e calcola l'accuratezza dell'Ensemble\n",
+        "\n",
         "combinazione = \"\"\n",
         "if modello_01 & modello_02 & modello_06:\n",
         "  predizioni = (predizioni01 + predizioni02 + 2*predizioni06) / 4\n",
@@ -950,7 +944,7 @@
         },
         "outputId": "b6ded8f7-8ac4-48a3-dd73-b00aff01f199"
       },
-      "execution_count": 731,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -973,15 +967,16 @@
       "cell_type": "code",
       "source": [
         "#@title Per salvare la matrice qui su Colab (da salvare poi manualmente)\n",
+        "\n",
         "matrice_df.to_csv('matrice_accuratezze_sep.csv', index=True)\n",
+        "\n",
         "# Salva solo i dati numerici del DataFrame in formato .npy\n",
         "np.save('matrice_accuratezze_sep.npy', matrice_df.values)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "bMM1We6YEo3b"
       },
-      "execution_count": 732,
+      "execution_count": null,
       "outputs": []
     }
   ]
