--- a/Download_Subset_e_Preprocessing.ipynb
+++ b/Download_Subset_e_Preprocessing.ipynb
@@ -130,7 +130,6 @@
         "run = 4 #@param {type:\"integer\"}\n",
         "run = f\"R{run:02d}\"\n",
         "\n",
-        "# Crea la cartella di destinazione se non esiste\n",
         "dest_dir = f\"/content/{run}\"\n",
         "os.makedirs(dest_dir, exist_ok=True)                                            # Crea la cartella se non esiste"
       ],
@@ -338,7 +337,7 @@
         "    #converti a 160 Hz\n",
         "    if(raw_data.info['sfreq'] != 160):\n",
         "      raw_data = raw_data.copy().resample(160)\n",
-        "    label = i                                                                   # Ottieni l'etichetta del file\n",
+        "    label = i                                                                   # Etichetta del file\n",
         "\n",
         "    # Filtro per bande\n",
         "    raw_data.filter(l_freq=bande[banda][0], h_freq=bande[banda][1], n_jobs=8, verbose = 'CRITICAL')\n",
@@ -352,7 +351,7 @@
         "    # Ora, dopo aver terminato tutte le operazioni di `mne`, si può convertire i dati in float32\n",
         "    data = data.astype(np.float32)\n",
         "\n",
-        "    data = np.array([epoch.T for epoch in data])                                # Riduci ogni epoca\n",
+        "    data = np.array([epoch.T for epoch in data])                                # Corregge la shape\n",
         "\n",
         "    clear_output(wait=True)\n",
         "\n",
@@ -367,7 +366,7 @@
         "    train_data, val_data, test_data = data[:n_train], data[n_train:n_train + n_val], data[n_train + n_val:]\n",
         "    train_labels, val_labels, test_labels = labels_for_file[:n_train], labels_for_file[n_train:n_train + n_val], labels_for_file[n_train + n_val:]\n",
         "\n",
-        "    # Aggiungi i segmenti e le etichette di questo file alle liste globali\n",
+        "    # Aggiunta dei segmenti e le etichette di questo file alle liste globali\n",
         "    all_train_data.append(train_data)\n",
         "    all_val_data.append(val_data)\n",
         "    all_test_data.append(test_data)\n",
